# flood_bandit

./: .gitignore  Damage_cost_curves.tab  HALMSTAD SJÖV - RH 2000.csv  LeveeHeightSelector.py  Protection_cost_curves_low_estimate.tab  README.md  beta_dueling_bandit_analytical.py  checking_estimate.py  checking_estimate_check.py  duelingclean.ipynb  fitting_simulator.ipynb  halmstad_cost_curves_tidy.csv  mvn_dueling_bandit.py  mvn_dueling_bandit_manual_demo.ipynb  optimal_levee_bandit.py  optimal_levee_bandit_gpu.py  pyproject.toml  reading_data.ipynb  requirements.txt  run_gpu_bandit.ipynb  runningRL.ipynb  testing_algorithm.ipynb  varberg_simulation.py
archive/: prototype_cpu_bandit.ipynb  prototype_grid_pruning.ipynb  script_check_estimate.py  script_check_estimate_mem.py
data/: Protection_cost_curves_high_estimate.tab  varberg_sl_annual_2010_2200.npz
notebooks/: 01_hazard_modeling.ipynb  02_data_prep.ipynb  03_main_experiment_gpu.ipynb  04_dueling_experiment.ipynb
src/: bandit_cpu.py  bandit_dueling.py  bandit_gpu.py
src/flood_bandit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
