[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flood_bandit"
version = "0.1.0"
description = "Optimal levee height selection using multi-armed bandit algorithms"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "jupyter",
]

[project.optional-dependencies]
gpu = ["cupy"]
